Fix matches overflow in mobile view

--- a/less/profile.less
+++ b/less/profile.less
@@ -76,10 +76,10 @@
   
   .media-scroller {
     margin: 4px, 4px;
-    padding: 60px;
+    padding: 60px 0;
     background-color: @primary-color;
     height: 350px;
-    width: 1450px;
+    max-width: 100vw;
     overflow-x: auto;
     overflow-y: hidden;
     white-space: nowrap;
